@@ -283,6 +283,7 @@ t/274_crop_corrupt_image.t
 t/281_to_png.t
 t/282_cancel_to_png.t
 t/283_to_png_with_error.t
+t/291_brightness_contrast.t
 t/31_ocropus.t
 t/32_ocropus_in_thread.t
 t/33_cancel_ocropus.t
