@@ -8,6 +8,7 @@
   Closes bug #243 (tesseract 3.05 OCR Engine not recogized)
 * + support for unpaper --no-mask-center option.
   Thanks to Peter Marschall for the patch
+* + contrast + brightness tool. Thanks to Peter Marschall for the patch
 
 
 1.7.3 (12.03.2017):
